wip port to react

--- a/webrtc/user_server/index.html
+++ b/webrtc/user_server/index.html
@@ -12,6 +12,10 @@
     <button id="sendMessage">Send Message</button>
     <div id="messages"></div>
 
-    <script src="script.js"></script>
+    <script>
+
+
+
+    </script>
 </body>
 </html>
